update xdebug config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,10 +67,14 @@ services:
       - 9003
     volumes:
       - ./projects:/var/www
+      - ./config/php/php.ini:/usr/local/etc/php/php.ini
+      - ./config/php/xdebug.ini:/usr/local/etc/php/xdebug.ini
     environment:
       XDEBUG_CONFIG: client_host=host.docker.internal
     networks:
       - localnetwork
+    extra_hosts:
+      - host.docker.internal:host-gateway
     deploy:
       resources:
         reservations:
